# vifm

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  .valgrind.supp  AUTHORS  BUGS  COPYING.3party  ChangeLog  ChangeLog.LuaAPI  FAQ  HACKING.md  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  TODO  aclocal.m4  appveyor.yml  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  deploy  fix-timestamps  libtool  ltmain.sh  mxe-deploy  test-driver
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
build-aux/: config.h.in
data/: commands  filehighlights-mc-like  keymap-mc  keymap-mc-extended  prefixes-mc-like  vifm-convert-dircolors.1  vifm-filetypes  vifm-fileviewers  vifm-help.txt  vifm-media  vifm-media-osx  vifm-pause.1  vifm.1  vifm.appdata.xml  vifm.desktop  vifmrc  vifmrc-converter.1  vifmrc-osx
data/colors/: Default-256.vifm  astrell-root  astrell-user  dmilith-root  dmilith-root.vifm  dmilith-user  istib-solarized-dark  juef-zenburn  (+1 more)
scripts/: check-syntax-changes  colorconv.vim  deploy  dit-import  fix-timestamps  mp-check-hyphen-use  mxe-deploy  release  release-macos  release-win  show-sixel  uncov-coverage
src/: .valgrind.supp  Makefile  Makefile.am  Makefile.in  Makefile.win  args.c  args.h  attr_dialog.h  attr_dialog_nix.c  attr_dialog_nix.h  attr_dialog_win.c  attr_dialog_win.h  background.c  background.h  bmarks.c  bmarks.h  bookmarks.c  bookmarks.h  bracket_notation.c  bracket_notation.h  builtin_functions.c  builtin_functions.h  change_dialog.c  change_dialog.h  cmd_actions.c  cmd_actions.h  cmd_completion.c  cmd_completion.h  cmd_core.c  cmd_core.h  cmd_handlers.c  cmd_handlers.h  cmdline.c  cmdline.h  cmds.c  cmds.h  color_manager.c  color_manager.h  color_scheme.c  color_scheme.h  (+196 more)
src/.deps/: background.Po  bookmarks.Po  color_scheme.Po  commands.Po  config.Po  file_info.Po  filelist.Po  fileops.Po  filetype.Po  keys.Po  menus.Po  registers.Po  rline.Po  search.Po  signals.Po  sort.Po  ui.Po  utils.Po  vifm.Po  visual.Po
src/cfg/: config.c  config.h  hist.c  hist.h  info.c  info.h  info_chars.h
src/compat/: curses.c  curses.h  dtype.c  dtype.h  fs_limits.h  getopt.c  getopt.h  getopt1.c  getopt_int.h  mntent.c  mntent.h  os.c  os.h  pthread.c  pthread.h  reallocarray.c  reallocarray.h  wcwidth.c  wcwidth.h
src/engine/: abbrevs.c  abbrevs.h  autocmds.c  autocmds.h  cmds.c  cmds.h  completion.c  completion.h  functions.c  functions.h  keys.c  keys.h  mode.c  mode.h  options.c  options.h  parsing.c  parsing.h  text_buffer.c  text_buffer.h  var.c  var.h  variables.c  variables.h
src/engine/private/: options.h
src/int/: desktop.c  desktop.h  ext_edit.c  ext_edit.h  file_magic.c  file_magic.h  fuse.c  fuse.h  path_env.c  path_env.h  term_title.c  term_title.h  vim.c  vim.h
src/io/: ioc.h  ioe.c  ioe.h  ioeta.c  ioeta.h  ionotif.h  iop.c  iop.h  ior.c  ior.h
src/io/private/: ioc.c  ioc.h  ioe.c  ioe.h  ioeta.c  ioeta.h  ionotif.c  ionotif.h  traverser.c  traverser.h
src/lua/: api.h  common.c  common.h  vifm.c  vifm.h  vifm_abbrevs.c  vifm_abbrevs.h  vifm_cmds.c  vifm_cmds.h  vifm_color.c  vifm_color.h  vifm_events.c  vifm_events.h  vifm_fs.c  vifm_fs.h  vifm_handlers.c  vifm_handlers.h  vifm_keys.c  vifm_keys.h  vifm_tabs.c  vifm_tabs.h  vifm_viewcolumns.c  vifm_viewcolumns.h  vifmentry.c  vifmentry.h  vifmjob.c  vifmjob.h  vifmtab.c  vifmtab.h  vifmview.c  vifmview.h  vlua.c  vlua.h  vlua_cbacks.c  vlua_cbacks.h  vlua_state.c  vlua_state.h
src/lua/lua/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcorolib.c  lctype.h  ldblib.c  ldebug.c  ldo.c  ldo.h  ldump.c  lfunc.c  lgc.c  liolib.c  llex.c  lmathlib.c  loadlib.c  lobject.c  lobject.h  loslib.c  lparser.c  lstate.c  lstate.h  lstring.c  lstrlib.c  ltablib.c  ltm.c  luaconf.h  lundump.c  lutf8lib.c
src/menus/: all.h  apropos_menu.c  apropos_menu.h  bmarks_menu.c  bmarks_menu.h  bookmarks_menu.c  bookmarks_menu.h  cabbrevs_menu.c  cabbrevs_menu.h  chistory_menu.c  chistory_menu.h  colorscheme_menu.c  colorscheme_menu.h  commands_menu.c  commands_menu.h  dirhistory_menu.c  dirhistory_menu.h  dirstack_menu.c  dirstack_menu.h  dirstask_menu.c  dirstask_menu.h  filetypes_menu.c  filetypes_menu.h  find_menu.c  find_menu.h  grep_menu.c  grep_menu.h  history_menu.c  history_menu.h  jobs_menu.c  jobs_menu.h  locate_menu.c  locate_menu.h  map_menu.c  map_menu.h  marks_menu.c  marks_menu.h  media_menu.c  media_menu.h  menus.c  (+17 more)
src/modes/: attr_dialog_nix.c  attr_dialog_nix.h  attr_dialog_win.c  attr_dialog_win.h  change_dialog.c  change_dialog.h  cmdline.c  cmdline.h  file_info.c  file_info.h  menu.c  menu.h  modes.c  modes.h  more.c  more.h  normal.c  normal.h  sort_dialog.c  sort_dialog.h  view.c  view.h  visual.c  visual.h  wk.h
src/modes/dialogs/: attr_dialog.h  attr_dialog_nix.c  attr_dialog_nix.h  attr_dialog_win.c  attr_dialog_win.h  change_dialog.c  change_dialog.h  msg_dialog.c  msg_dialog.h  sort_dialog.c  sort_dialog.h
src/private/: fileops.h
src/ui/: cancellation.c  cancellation.h  color_manager.c  color_manager.h  color_scheme.c  color_scheme.h  colored_line.c  colored_line.h  colors.c  colors.h  column_view.c  column_view.h  escape.c  escape.h  fileview.c  fileview.h  quickview.c  quickview.h  statusbar.c  statusbar.h  statusline.c  statusline.h  tabs.c  tabs.h  ui.c  ui.h
src/ui/private/: statusline.h
src/utils/: cancellation.c  cancellation.h  colored_line.c  colored_line.h  darray.h  dynarray.c  dynarray.h  env.c  env.h  event.h  event_nix.c  event_win.c  file_streams.c  file_streams.h  filemon.c  filemon.h  filter.c  filter.h  fs.c  fs.h  fs_limits.h  fsdata.c  fsdata.h  fsddata.c  fsddata.h  fswatch.c  fswatch.h  fswatch_nix.c  fswatch_win.c  globs.c  globs.h  gmux.h  gmux_nix.c  gmux_win.c  hist.c  hist.h  int_stack.c  int_stack.h  log.c  log.h  (+49 more)
src/utils/private/: fsdata.h
src/vim/doc/: vifm.txt
src/vim/ftplugin/: vifmrc.vim
src/vim/plugin/: vifm.vim
src/vim/syntax/: vifm.vim  vifmrc.vim
tests/: Makefile  Makefile.inc  detectenv.mk  stubs.c
(+755 files in other folders)
